--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.54.0/dist/phaser.min.js"></script>
 </head>
 
-<body>
+<body style="background-color: #353540;">
     <script type="module" src="dungeon.js"></script>
     <script src="utils/state-machine.min.js"></script>
     <script type="module" src="player.js"></script>
+    <script type="module" src="questionManager.js"></script>
     <script type="module" src="game.js"></script>
+
 </body>
 
 </html>
